# python-epo-ops-client

./: .bumpversion.cfg  .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .python-version  .ruby-gemset  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Gemfile  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  TODOS.md  __version__.py  apiary.apib  codecov.yml  example.env  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yml  release-pypi.yml
docs/: authors.md  backlog.md  contributing.md  release.md  sandbox.md
epo_ops/: __init__.py  __version__.py  api.py  exceptions.py  models.py  settings.py  utils.py
epo_ops/middlewares/: __init__.py  middleware.py
epo_ops/middlewares/cache/dogpile/: __init__.py  dogpile.py  helpers.py
epo_ops/middlewares/json/: JsonResponse.py  __init__.py
epo_ops/middlewares/throttle/: __init__.py  throttler.py  utils.py
epo_ops/middlewares/throttle/storages/: __init__.py  sqlite.py  storage.py
epo_ops/throttle/: __init__.py  storages.py  throttler.py  utils.py
epo_ops/throttle/storages/: SQLite.py  Storage.py  __init__.py  sqlite.py
epo_ops/utils/: __init__.py  json.py
misc/CocoaRestClient/: test requests
requirements/: base.in  base.txt  dev.in  dev.txt  test-27.in  test-27.txt  test-35.txt  test.in  test.txt
tests/: conftest.py  secrets.py  secrets.py.example  test_api.py  test_cached_api.py  test_client.py  test_epo_ops.py  test_json.py  test_models.py  test_ops_quota.py  test_utils.py
tests/helpers/: __init__.py  api_helpers.py
tests/middlewares/: test_middleware.py
tests/middlewares/throttle/: conftest.py  test_sqlite.py  test_storage.py  test_throttler.py  test_utils.py
tests/throttle/: conftest.py  test_json.py  test_sqlite.py  test_storage.py  test_utils.py
tests/throttle/helpers/: conftest_helpers.py
(+6 files in other folders)
